--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "createvueui-cli",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "bin": {
     "createVueUI": "bin/init.js"
   },
@@ -11,7 +11,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/358xiaoyihezemin/createVueUI-cli.git"
+    "url": "git+https://github.com/358xiaoyihezemin/createVueUI-cli.git",
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
@@ -27,5 +28,9 @@
     "ncp": "^2.0.0",
     "ora": "^3.4.0",
     "shelljs": "^0.8.3"
+  },
+  "devDependencies": {
+    "webpack": "^4.35.2",
+    "webpack-cli": "^3.3.5"
   }
 }
